--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -10,6 +10,10 @@
 
     android:background="@color/dark_purple">
 
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,41 +57,44 @@
             android:layout_marginTop="16dp"
             android:background="@color/white"
             android:layout_weight="1"
-            android:entries="@array/Projects"
+
             android:pointerIcon="arrow"
+            android:id="@+id/projOnReportSpinner"
             />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_gravity="center">
+        android:layout_height="400dp">
 
-        <ImageView
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/line_chart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/report_sample"/>
+            android:layout_height="match_parent"
+            android:layout_margin="40dp"
+            />
+
+    </RelativeLayout>
 
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:textColor="@color/light_purple"
-            android:layout_marginTop="20dp"
+
             android:textSize="20sp"
-            android:text="Select Period"
-            android:layout_weight="1"/>
+            android:text="Period"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            />
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="wrap_content"
@@ -114,7 +121,43 @@
             android:id="@+id/btnEndPeriod"
             android:layout_weight="1"
             />
+        <Button
+            android:id="@+id/btnGraphDateRange"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:background="@drawable/projsearch"
+            />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtdisplayStart"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Start Date"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+
+            android:layout_marginLeft="110dp"/>
+        <TextView
+            android:id="@+id/txtdisplayEnd"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="End Date"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:layout_marginLeft="19dp"
+            />
     </LinearLayout>
 
     <RelativeLayout
